<resources>
    <string name="app_name">Vedas Mart</string>
    <string name="app_id" translatable="false">683977971997122</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location">Loaction</string>
    <string name="cart">Cart</string>
    <string name="serach">Search</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="text_signin">Sign in to your Vedas Mart Account</string>
    <string name="text_register">Registration</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phoneNo">Phone Number</string>
    <string name="get_verificationcode">Get Verification Code</string>
    <string name="country_code">+91</string>
    <string name="hint_verification"> Verification Code</string>
    <string name="text_singup">Sign in/Sign up</string>
    <string name="btn_register">Register</string>
    <string name="fiels_is_required">field is required</string>
    <string name="network">network is not available</string>
    <string name="addnewaddress">ADD NEW ADDRESS</string>
    <string name="enterfullname">ENTER FULL NAME</string>
    <string name="address">ADDRESS</string>
    <string name="landmark">LANDMARK(Optional)</string>
    <string name="pincode">PINCODE(Only Bangalore Locations)</string>
    <string name="area">AREA</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="your_mobile_number">YOUR MOBILE NUMBER</string>
    <string name="my_favorite_address">MARK AS FAVORITE</string>
    <string name="proceed">PROCEED</string>
    <string name="cart_empty_text">Your Shopping Cart is empty!\n Start Shopping now</string>
    <string name="cart_items">Item(s) in cart</string>
    <string name="total_savings">TOTAL SAVINGS </string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="rupee">\u20B9</string>
    <string name="singlezero">.0</string>
    <string name="text_selfpickup">You can Collect Your Order from Vedas Mart PickUp Point. Select Self Pickup point near you, with convenient time slot.</string>
    <string name="text_homedelivery">You can also get your orders delivered to an address of your choice, if the order value is less than 2000 INR, then 250 INR will collect as delivery charges.</string>
    <string name="address1">Flat no.404,Sai Radha Residency Vijaya Nagar Colony, Anantapur, Andhra Pradesh 515001</string>
    <string name="texrArea">Enter your area pincode to view a pick up point nearest to your location</string>
    <string name="delivery_descriptio">For Door Delivery minimum order should be INR 1500.00. Additional delivery charges are applied. To collect your order by your own, please select Self Pickup option.</string>
    <string name="text_orders">No Orders</string>
    <string name="online">Pay Online</string>
    <string name="cod">Pay by cash/Card on Delivery</string>
    <string name="information">Important Information</string>
    <string name="completeOrderText">Please Complete Your Order in the next 10 minutes to avoid cancellation</string>
    <string name="verify">Verify</string>
    <string name="enterOtp">Enter OTP received to your mobile number</string>
    <string name="add_to_cart">AddToCart</string>
    <string name="remove">Remove</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="remove_all">Remove All</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="customer_care">Customer Care</string>
    <string name="email">Email:</string>
    <string name="vedas_gmail">contact.vedas@gmail.com</string>
    <string name="call_us_on">Call Us On:</string>
    <string name="vedas_ph_no">+91 9154734093</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="submit">SUBMIT</string>
    <string name="cart_value">Your Cart Value</string>
    <string name="incl_of_taxes_">(Incl Of Taxes)</string>
    <string name="your_savings_on_m_r_p">Your Savings</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="change">Change</string>
    <string name="name_">Name:</string>
    <string name="address_">Address:</string>
    <string name="landmark_">Landmark:</string>
    <string name="delivery_date">Pickup Date:</string>
    <string name="delivery_time">Pickup Time:</string>
    <string name="item_s_in_cart">Items in cart</string>
    <string name="quantity">QUANTITY</string>
    <string name="proceed_to_make_payment">Proceed to Make Payment</string>
    <string name="tap_to_select_the_one_of_the_delivery_modes">Tap to Select the one of the delivery modes</string>
    <string name="delivery_charges_extra">Delivery Charges Extra</string>
    <string name="select">Select</string>
    <string name="you_selected_">You Selected</string>
    <string name="home_delivery_">Home Delivery</string>
    <string name="delivery_charges_">Delivery Charges</string>
    <string name="select_delivery_address_">Select Delivery Address</string>
    <string name="tap_to_add_an_address">Tap to add an address</string>
    <string name="select_delivery_time">Select Delivery Time</string>
    <string name="download">Download Invoice</string>
    <string name="share">Export</string>
    <string name="address_book">ADDRESS BOOK</string>
    <string name="sign_in">SIGN IN</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="order_number">Order Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="selfpickup">SelfPickUp</string>
    <string name="DeliveryDetails">DELIVERY DETAILS</string>
    <string name="Searchaproduct">Search a product</string>
    <string name="_address_">Address</string>
    <string name="order_summary_">ORDER SUMMARY</string>
    <string name="discount">Discount</string>
    <string name="sub_total">SUB-TOTAL</string>
    <string name="_delivery_charges_">Delivery Charges</string>
    <string name="cart_total">Cart Total</string>
    <string name="you_saved">You Saved</string>
    <string name="total_amount_paid">TOTAL AMOUNT PAID</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="enter_otp">Enter otp</string>
    <string name="proceed_">Proceed</string>
    <string name="payment_response">Payment Response</string>
    <string name="your_payment_and_order_is_n_successfull">Your payment and order is   successfull</string>
    <string name="your_transaction_id_is">Your transaction ID is</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="in_v_mart_n_android_or_ios_app">In Vedas Mart</string>
    <string name="pickup_your_order">Pickup Your Order</string>
    <string name="collect_your_order_at_selected_n_self_pickup_point">Collect your order at selected self pickup point</string>
    <string name="save_your_money">Save your Money</string>
    <string name="save_your_money_and_n_valuable_time">Save your money and valuable time</string>
    <string name="suggest_a_nearest_pick_up_point">Suggest a nearest pick up point</string>
    <string name="or">OR</string>
    <string name="i_e_450001_or_bangalore">i.e:450001 or Bangalore</string>
    <string name="search">Search</string>
    <string name="total_price_">Total Price</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="order_summary">Order Summary</string>
    <string name="tap_for_more_details">Tap for More Details</string>
    <string name="show_less">Show Less</string>
    <string name="your_cart_value">Your Cart Value</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="view"><u>View</u></string>
    <string name="amount_payable">Amount Payable</string>
    <string name="amount">Amount Payable</string>
    <string name="your_savings">Your Savings</string>
    <string name="you_selected">You selected</string>
    <string name="self_pick_up">Self Pick Up</string>
    <string name="our_recommendation">Our recommendation</string>
    <string name="delivery_free">Delivery Free</string>
    <string name="select_pick_up_location">Select Pick Up Location</string>
    <string name="edit_change">EDIT/CHANGE</string>
    <string name="select_pick_up_time">Select PickUpTime</string>
    <string name="change_">Change</string>
    <string name="select_a_time_slot">Select a Time Slot</string>
    <string name="view_order_summary">View Order Summary</string>
    <string name="skip"><![CDATA[SKIP >]]></string>
    <string name="filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="Clear">Clear</string>
    <string name="view_cart">View Cart</string>
    <string name="select_delivery_time_slot">SELECT DELIVERY TIME SLOT</string>
    <string name="request_you_to_be_on_time_to_collect_your_order_missing_your_pick_up_time_might_lead_to_order_cancellation">Request you to be on time to collect your order.Missing your pick up time might lead to order cancellation.</string>
    <string name="alert">Alert</string>
    <string name="caution">Caution</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">SORT BY</string>
    <string name="relevance">Relevance</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="all_categories">All categories</string>
    <string name="customer_service">Customer Service</string>
    <string name="call_now">Call now</string>
    <string name="contact_us">Contact us</string>
    <string name="track_my_order">List of Orders</string>
    <string name="pick_up_point_list">pick up point list</string>
    <string name="frequent_questions">FREQUENT QUESTIONS</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_and_returns">Refund and Returns</string>
    <string name="about_us">About Us</string>
    <string name="share_app">SHARE APP</string>
    <string name="order_number_">Order number</string>
    <string name="order_total">Order Total</string>
    <string name="online_">Online</string>
    <string name="delivery_type">Delivery type</string>
    <string name="self_pickup">Self PickUp</string>
    <string name="time">time</string>
    <string name="quantity_">quantity</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="cod_not_available">COD not available</string>
    <string name="ok">OK</string>
    <string name="view_map">View Map</string>
    <string name="add_to_cart_">AddToCart</string>
    <string name="ChangeLanguage">CHANGE LANGUAGE</string>
    <string name="stop">Stop</string>
    <string name="nothanks">No thanks</string>
    <string name="my_account">My Account</string>
    <string name="DeliveryArea">DELIVERY AREAS</string>
    <string name="deliveryAreaMessage">Currently serving in selected locations of Banglore.</string>
    <string name="enter_your_area_pincode">ENTER YOUR AREA PINCODE</string>
    <string name="PickupDetails">PICK UP DETAILS</string>
    <string name="Taxofincludedintotalamount">Tax of 3% included in total amount</string>
</resources>