<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/not_applicable"
        android:textSize="19dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/cod_not_available"
        android:textSize="16dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/textcancel"
        android:layout_marginTop="17dp"
        android:text="@string/ok"
        android:textColor="#2f92fe"
        android:textSize="19dp" />

</RelativeLayout>